# Captain-Rex-Bot-Reddit

./: main.py  main.txt  pyproject.toml
lists/: cake_day_list.txt  cake_day_replies.txt  general_replies.txt  general_triggers.txt  gray_list.txt  gray_list_replies.txt  ignore_list.txt  replies.txt  response_replies.txt
