[tool.poetry]
name = "repl_nix_Captain-Rex-Bot-Reddit"
version = "0.1.0"
description = ""
authors = ["BushMasterJM <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
praw = "^7.5.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
